Fix alpha route typecheck schemas
